--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -30,7 +30,8 @@
       <label for="role">Rôle :</label>
       <select id="role" [(ngModel)]="registerRequest.role" name="role" required>
         <option value="OUVRIER">OUVRIER</option>
-        <option value="SUPERVISEUR">SUPERVISEUR</option>
+        <option value="SUPERVISEUR">SUPERVISEUR</option> 
+        <option value="ADMIN">ADMIN</option>
       </select>
     </div>
 
